# sbi-seminar

./: .gitignore  Makefile  README.md  _quarto-manuscript.yml  _quarto.yml  _template_README.md  bibliography.bib  bibstyle.csl  index.html  index.qmd  pdf-to-webp.lua  pyproject.toml
.github/workflows/: publish.yaml
_manuscript/_tex/: index.tex
project_scripts/: pyproject.toml
