[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipyleaflet>=0.19.2",
    "ipython>=8.18.1",
    "jupyter-cache>=1.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "quarto-cli>=1.5.57",
    "project-scripts",
    "sbi>=0.26.1",
    "plotly>=6.7.0",
    "lampe>=0.9.0",
    "zuko>=1.6.0",
    "dynesty>=3.0.0",
]

[tool.uv.workspace]
members = ["project_scripts/project_scripts"]

[tool.uv.sources]
project-scripts = { path = "project_scripts", editable = true }
