[project]
name = "project-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jacopok", email = "jacopok@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "ipython>=8.18.1",
    "matplotlib>=3.9.2",
    "numpy>=1.22.2",
    "scipy>=1.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
